--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ header {
 
 nav {
   margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 nav a {
@@ -44,6 +47,55 @@ nav a {
 
 nav a:hover {
   text-decoration: underline;
+}
+
+/* 🔸 Mobile menu toggle */
+.menu-toggle {
+  display: none;
+  font-size: 26px;
+  cursor: pointer;
+  color: white;
+  position: absolute;
+  right: 25px;
+  top: 25px;
+}
+
+/* 🔸 Responsive behavior */
+@media (max-width: 768px) {
+  nav {
+    display: none;
+    flex-direction: column;
+    background-color: #1e3a8a;
+    position: absolute;
+    top: 90px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+  }
+
+  nav a {
+    display: block;
+    margin: 12px 0;
+    font-size: 18px;
+  }
+
+  .menu-toggle {
+    display: block;
+  }
+
+  nav.active {
+    display: flex;
+  }
+
+  .header-container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .header-text h1 {
+    font-size: 22px;
+  }
 }
 
 main {
